k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: code-explainer
  labels:
    name: code-explainer
